--- a/interface.html
+++ b/interface.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal">
+<form class="form-horizontal" {{#if provId}}data-provider-id = "{{provId}}" {{/if}}>
 
   {{#if options.label}}
     <div class="form-group clearfix">
