--- a/interface.html
+++ b/interface.html
@@ -65,7 +65,7 @@
             <p class="help-block">This needs to be URL encoded - <a target="_blank" href="http://meyerweb.com/eric/tools/dencoder/">URL encoding tool</a></p>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group{{#if options.hideTransition}} hidden{{/if}}">
           <div class="col-sm-4 control-label">
             <label for="transition">Select an animation</label>
           </div>
