--- a/interface.html
+++ b/interface.html
@@ -44,7 +44,7 @@
       <div id="screen-form">
         <div id="screen-list" class="form-group">
           <div class="col-sm-4 control-label">
-            <label for="page">Select a screen {{#if options.required}}(Required){{/if}}</label>
+            <label for="page">Select a screen {{#if options.pageRequired}}(Required){{/if}}</label>
           </div>
           <div class="col-sm-8">
             <label for="page" class="select-proxy-display">
