--- a/interface.html
+++ b/interface.html
@@ -5,14 +5,14 @@
 
   <div class="link-wrapper">
     {{#if options.label}}
-    <div class="form-group clearfix">
-      <div class="col-sm-4 control-label">
-        <label for="linkLabel">Link label</label>
+      <div class="form-group clearfix">
+        <div class="col-sm-4 control-label">
+          <label for="linkLabel">Link label</label>
+        </div>
+        <div class="col-sm-8">
+          <input type="text" name="linkLabel" class="form-control" id="linkLabel" placeholder="Label" value="{{linkLabel}}" required />
+        </div>
       </div>
-      <div class="col-sm-8">
-        <input type="text" name="linkLabel" class="form-control" id="linkLabel" placeholder="Label" value="{{linkLabel}}" required />
-      </div>
-    </div>
     {{/if}}
 
     <div id="link-action" {{#if options.hideAction}} class="hidden" {{/if}}>
@@ -33,6 +33,7 @@
               <option value="about-overlay">Open the about this app overlay</option>
               <option value="app">Link to an external application</option>
               <option value="exit-app">Return to app list</option>
+              <option value="logout">Log out</option>
             </select>
             <span class="icon fa fa-chevron-down"></span>
           </label>
@@ -116,7 +117,8 @@
         </div>
         <div class="col-sm-8">
           <div class="file-holder document">
-            <div class="btn btn-default add-document">{{#unless files.id}}Browse your media library{{else}}Replace document{{/unless}}</div>
+            <div class="btn btn-default add-document">{{#unless files.id}}Browse your media library
+              {{else}}Replace document{{/unless}}</div>
             <div class="info-holder {{#unless files.id}}hidden{{/unless}}">
               <div class="file-title"><i class="fa fa-file" aria-hidden="true"></i> <span>{{files.name}}</span></div>
               <div class="btn btn-link text-danger document-remove"><i class="fa fa-trash" aria-hidden="true"></i> Remove</div>
@@ -134,7 +136,8 @@
         </div>
         <div class="col-sm-8">
           <div class="file-holder video">
-            <div class="btn btn-default add-video">{{#unless files.id}}Browse your media library{{else}}Replace video{{/unless}}</div>
+            <div class="btn btn-default add-video">{{#unless files.id}}Browse your media library
+              {{else}}Replace video{{/unless}}</div>
             <div class="info-holder {{#unless files.id}}hidden{{/unless}}">
               <div class="file-title"><i class="fa fa-file-video-o" aria-hidden="true"></i> <span>{{files.name}}</span></div>
               <div class="btn btn-link text-danger video-remove"><i class="fa fa-trash" aria-hidden="true"></i> Remove</div>
@@ -229,6 +232,68 @@
         <p class="help-block"><small>E.g. <code>https://example.org</code></small></p>
         <p class="error-success-message"></p>
       </div>
+    </div>
+
+    <div id="logoutSection" class="section">
+      <div class="form-group">
+        <div class="col-sm-4 control-label">
+          <label for="action">After the user is logged out...</label>
+        </div>
+        <div class="col-sm-8">
+          <label for="action2" class="select-proxy-display">
+            <select name="link_type" id="action2" data-label="select" class="hidden-select form-control">
+              <option value="screen">Display another screen</option>
+              <option value="exit-app">Return to app list</option>
+            </select>
+            <span class="icon fa fa-chevron-down"></span>
+          </label>
+        </div>
+      </div>
+
+      <div id="screen-list" class="form-group">
+        <div class="col-sm-4 control-label">
+          <label for="page">Select a screen {{#if options.pageRequired}}(Required){{/if}}</label>
+        </div>
+        <div class="col-sm-8">
+          <label for="page" class="select-proxy-display">
+            <select name="link_screen" id="page" data-label="select" class="hidden-select form-control">
+              <option value="none">Select a screen</option>
+            </select>
+            <span class="icon fa fa-chevron-down"></span>
+          </label>
+          <a id="add-query" href="#">Add query parameters</a>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-4 control-label">
+          <label for="transition">Select an animation</label>
+        </div>
+        <div class="col-sm-8">
+          <label for="transition" class="select-proxy-display">
+            <select name="transition" id="transition" data-label="select" class="hidden-select form-control">
+              <optgroup label="Default">
+                <option value="none">None</option>
+                <option value="fade">Fade</option>
+                <option value="slide.left">Slide Left</option>
+                <option value="slide.right">Slide Right</option>
+                <option value="slide.up">Slide Up</option>
+                <option value="slide.down">Slide Down</option>
+                <option value="flip.left">Flip Left / Slide Left (Windows)</option>
+                <option value="flip.right">Flip Right / Slide Right (Windows)</option>
+                <option value="flip.up">Flip Up / Slide Up (Windows)</option>
+                <option value="flip.down">Flip Down / Slide Down (Windows)</option>
+              </optgroup>
+              <optgroup label="iOS Enhanced">
+                <option value="curl.up">Curl Up (iOS) / Slide Up (Android/Windows)</option>
+                <option value="curl.down">Curl Down (iOS) / Slide Down (Android/Windows)</option>
+              </optgroup>
+            </select>
+            <span class="icon fa fa-chevron-down"></span>
+          </label>
+        </div>
+      </div>
+
     </div>
   </div>
 </form>
