[ADD] add new section control

--- a/interface.html
+++ b/interface.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div id="logoutSection" class="section">
+    <div id="logoutSection" class="section logout-section">
       <div class="form-group">
         <div class="col-sm-4 control-label">
           <label for="logoutAction">After the user is logged out...</label>
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <div id="screenSection" class="section section-child">
+    <div id="screenSection" class="section screen-section sup-screen-section">
       <div id="screen-form">
         <div id="screen-list" class="form-group">
           <div class="col-sm-4 control-label">
@@ -114,7 +114,7 @@
       </div>
     </div>
 
-    <div id="urlSection" class="section">
+    <div id="urlSection" class="section url-section">
       <div id="webpage-form">
         <div class="form-group">
           <div class="col-sm-4 control-label">
@@ -127,7 +127,7 @@
       </div>
     </div>
 
-    <div id="documentSection" class="section">
+    <div id="documentSection" class="section document-section">
       <div class="form-group">
         <div class="col-sm-4 control-label">
           <label for="add-document">Select a document</label>
@@ -145,7 +145,7 @@
       </div>
     </div>
 
-    <div id="videoSection" class="section">
+    <div id="videoSection" class="section video-section">
       <div class="form-group">
         <div class="col-sm-4 control-label">
           <label for="add-document">Select a video</label>
@@ -163,7 +163,7 @@
       </div>
     </div>
 
-    <div id="appSection" class="section section-child">
+    <div id="appSection" class="section app-section">
       <div class="form-group">
         <div class="col-sm-4 control-label">
           <label for="appAction">Select the app and action</label>
