--- a/interface.html
+++ b/interface.html
@@ -23,7 +23,7 @@
         <div class="col-sm-8">
 
           <label for="action" class="select-proxy-display">
-            <select id="action" data-label="select" class="hidden-select form-control action-configurator">
+            <select name="link_type" id="action" data-label="select" class="hidden-select form-control action-configurator">
               <option value="none">None</option>
               <option value="screen">Display another screen</option>
               <option value="back">Go back to previous screen</option>
@@ -66,7 +66,7 @@
           </div>
           <div class="col-sm-8">
             <label for="page" class="select-proxy-display">
-              <select id="page" data-label="select" class="hidden-select form-control">
+              <select id="page" name="link_screen" data-label="select" class="hidden-select form-control">
                 <option value="none">Select a screen</option>
               </select>
               <span class="icon fa fa-chevron-down"></span>
