--- a/interface.html
+++ b/interface.html
@@ -33,7 +33,7 @@
               <option value="about-overlay">Open the about this app overlay</option>
               <option value="app">Link to an external application</option>
               <option value="exit-app">Return to app list</option>
-              <option value="logout">Log Out</option>
+              <option value="logout">Log out</option>
             </select>
             <span class="icon fa fa-chevron-down"></span>
           </label>
