--- a/interface.html
+++ b/interface.html
@@ -26,6 +26,8 @@
               <option value="none">None</option>
               <option value="screen">Display another screen</option>
               <option value="back">Go back to previous screen</option>
+              <option value="next-slide">Go to next slide</option>
+              <option value="previous-slide">Go to previous slide</option>
               <option value="url">Open a web page</option>
               <option value="document">Open a document</option>
               <option value="video">Play a video</option>
