[Feature] Update the LAP interface

--- a/interface.html
+++ b/interface.html
@@ -107,7 +107,7 @@
           <label for="parentDataSourceColumn">Select column</label>
         </div>
         <div class="col-sm-8">
-          <select id="parentDataSourceColumn" class="form-control">
+          <select id="parentDataSourceColumn" class="form-control lap-column-select" data-lap-type="">
             <option value="">Select a column</option>
           </select>
         </div>
