ID-4728 [FEATURE] add support for slider actions

--- a/interface.html
+++ b/interface.html
@@ -34,6 +34,8 @@
               <option value="exit-app">Return to app list</option>
               <option value="logout">Log out</option>
               <option value="runFunction">Call a JavaScript Function</option>
+              <option value="nextSlide">Go to Next Slide</option>
+              <option value="previousSlide">Go to Previous Slide</option>
             </select>
             <span class="icon fa fa-chevron-down"></span>
           </label>
