[update] make changes in LAP for LFD v2

--- a/interface.html
+++ b/interface.html
@@ -220,6 +220,18 @@
       </div>
     </section>
 
+    <template id="lap-error-template">
+      <div class="lap-error-message">
+        The selected column does not contain valid <span class="lap-error-type"></span> data.
+      </div>
+    </template>
+
+    <template id="chat-error-template">
+      <div class="chat-error-message">
+        <span class="chat-error-text"></span>
+      </div>
+    </template>
+
     <section id="urlSection" data-key="url">
       <div id="webpage-form">
         <div class="form-group">
