--- a/interface.html
+++ b/interface.html
@@ -126,10 +126,7 @@
 
           <!-- Show confirmation dialog -->
           <div class="form-group">
-            <div class="col-sm-4 control-label">
-              <!-- empty to keep left spacing consistent -->
-            </div>
-            <div class="col-sm-8">
+            <div class="col-sm-8 col-sm-offset-4">
               <div class="checkbox checkbox-icon">
                 <input type="checkbox" id="showConfirmationMessage" name="showConfirmationMessage">
                 <label for="showConfirmationMessage">
