ID-4728 [FIX] update class name

--- a/interface.html
+++ b/interface.html
@@ -112,7 +112,7 @@
           <select id="parentDataSourceColumn" class="form-control lap-column-select">
             <option value="">Select a column</option>
           </select>
-          <div id="column-error-message" class="alert-error hidden">
+          <div id="column-error-message" class="lap-alert-error hidden">
             The selected column does not contain valid <span class="lap-error-type"></span> data.
           </div>
         </div>
@@ -179,7 +179,7 @@
               </select>
               <span class="icon fa fa-chevron-down"></span>
             </label>
-            <div id="chat-error-message" class="alert-error hidden">
+            <div id="chat-error-message" class="lap-alert-error hidden">
               <span></span>
             </div>
             <a id="add-query" href="#">Add query parameters</a>
