--- a/interface.html
+++ b/interface.html
@@ -34,12 +34,6 @@
               <option value="exit-app">Return to app list</option>
               <option value="logout">Log out</option>
               <option value="runFunction">Call a JavaScript Function</option>
-              <option value="addEntry">Add new entry</option>
-              <option value="editEntry">Edit entry</option>
-              <option value="deleteEntry">Delete entry</option>
-              <option value="email">Send email</option>
-              <option value="telephone">Call via telephone</option>
-              <option value="chat">Open Chat</option>
               <option value="nextSlide">Go to Next Slide</option>
               <option value="previousSlide">Go to Previous Slide</option>
             </select>
@@ -91,83 +85,8 @@
       </div>
     </section>
 
-    <section id="dataSourceDetailsSection" data-key="email telephone chat">
-      <!-- Display parent data source -->
-      <div class="form-group">
-        <div class="col-sm-8 col-sm-offset-4">
-          <div id="dataSourceDetails" class="hidden">
-            <code></code> <span></span>
-          </div>
-          <p id="missingDataSource" class="form-control-static hidden">No data source found</p>
-          <span class="help-text">To change this Data Source, go to parent data container</span>
-        </div>
-      </div>
-
-      <!-- Columns dropdown -->
-      <div class="form-group">
-        <div class="col-sm-4 control-label">
-          <label for="parentDataSourceColumn">Select column</label>
-        </div>
-        <div class="col-sm-8">
-          <select id="parentDataSourceColumn" class="form-control lap-column-select">
-            <option value="">Select a column</option>
-          </select>
-          <div id="column-error-message" class="lap-alert-error hidden">
-            The selected column does not contain valid <span class="lap-error-type"></span> data.
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="screenSection" data-key="screen addEntry editEntry deleteEntry chat">
+    <section id="screenSection" data-key="screen">
       <div id="screen-form">
-        <!-- Delete entry extra fields -->
-        <div id="delete-fields" class="hidden">
-
-          <!-- Show confirmation dialog -->
-          <div class="form-group">
-            <div class="col-sm-8 col-sm-offset-4">
-              <div class="checkbox checkbox-icon">
-                <input type="checkbox" id="showConfirmationMessage" name="showConfirmationMessage">
-                <label for="showConfirmationMessage">
-                  <span class="check"><i class="fa fa-check"></i></span>
-                  Show confirmation dialogue
-                </label>
-              </div>
-            </div>
-          </div>
-
-          <!-- Confirmation message -->
-          <div class="form-group" id="deleteMessageGroup" style="display: none;">
-            <div class="col-sm-4 control-label">
-              <label for="confirmMessage">Confirmation dialogue message</label>
-            </div>
-            <div class="col-sm-8">
-              <textarea id="confirmMessage" name="confirmMessage" class="form-control" placeholder="Are you sure you want to delete this item?"></textarea>
-            </div>
-          </div>
-
-          <!-- Confirm button label -->
-          <div class="form-group">
-            <div class="col-sm-4 control-label">
-              <label for="confirmLabel">Confirmation button label</label>
-            </div>
-            <div class="col-sm-8">
-              <input type="text" id="confirmLabel" name="confirmLabel" class="form-control" placeholder="Confirm" />
-            </div>
-          </div>
-
-          <!-- Cancel button label -->
-          <div class="form-group">
-            <div class="col-sm-4 control-label">
-              <label for="cancelLabel">Cancel button label</label>
-            </div>
-            <div class="col-sm-8">
-              <input type="text" id="cancelLabel" name="cancelLabel" class="form-control" placeholder="Cancel" />
-            </div>
-          </div>
-        </div>
-
         <div id="screen-list" class="form-group">
           <div class="col-sm-4 control-label">
             <label id="pageLabel" for="page"></label>
@@ -179,9 +98,6 @@
               </select>
               <span class="icon fa fa-chevron-down"></span>
             </label>
-            <div id="chat-error-message" class="lap-alert-error hidden">
-              <span></span>
-            </div>
             <a id="add-query" href="#">Add query parameters</a>
           </div>
         </div>
